# JsonConverter

./: CMakeLists.txt  JsonConverter.cpp  JsonConverter.sln  JsonConverter.vcxproj  JsonConverter.vcxproj.filters
builders/: json_builder.cpp  json_builder.h
classifiers/: ClassificationResult.h  classification.h  rule_engine.h
config/: config.h  file_type.h
detectors/: file_detector.h  inspection_result.h
factory/: parser_factory.cpp  parser_factory.h
models/: plot_data.h
parsers/: FaceClearanceConformParser.cpp  FaceClearanceConformParser.h  PositionConformParser.cpp  PositionConformParser.h  RingPositionCycleParser.cpp  RingPositionCycleParser.h  Scatter3dAnimParser.cpp  Scatter3dAnimParser.h  StrainEnergyConformParser.cpp  StrainEnergyConformParser.h  SurfaceAnimParser.cpp  SurfaceAnimParser.h  base_parser.h  matrix_parser_base.h  parser_2d.h  parser_3d.h  parser_face_wear.cpp  parser_face_wear.h  parser_generic.h  parser_gmsh.h  parser_heatmap.h  parser_surface.h  pressure_conform_parser.cpp  pressure_conform_parser.h  ring_forces_parser.cpp  ring_forces_parser.h
registry/: parser_registry.h
utils/: file_utils.h
